--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
     {% endif %}
 
     {% if site.github.is_user_page %}
-    <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+    <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub</a></p>
     {% endif %}
 {% endunless %}
 
