--- a/_includes/header-title.html
+++ b/_includes/header-title.html
@@ -8,6 +8,19 @@
 <h2>{{ site.title | default: site.github.repository_name }}</h2>
 {% endif %}
 
-{% if site.email %}
+<!---{% if site.email %}
 <p class="addr"><i class="fa-solid fa-envelope"></i>&nbsp;<a href="mailto:reginaldchristianbernardo@gmail.com">{{ site.email }}</a></p>
+{% endif %}--->
+
+<p class="addr">Say Hi ( 
+{% if site.email %}
+<i class="fas fa-envelope"></i>&nbsp;<a href="mailto:{{ site.email }}">Email</a>
 {% endif %}
+{% if site.email and site.twitter %}
+/ 
+{% endif %}
+{% if site.twitter %}
+<i class="fab fa-twitter"></i>&nbsp;<a href="https://twitter.com/{{ site.twitter }}">Twitter</a>
+{% endif %}
+)</p>
+
